# opencv-book

./: .gitignore  readme.org
cpp/chapter4/: CMakeLists.txt  integral_images.cpp  uchar_image.cpp
cpp/chapter5/: 1_many_functions.cpp  2_draw_rect.cpp  3_draw_rectangle.cpp  4_roi_pyr.cpp  CMakeLists.txt
highgui/simpleload/: simpleload.cpp
python/highgui/: displayImage.py
